# OpenGalaxies

./: .gitignore  AUTHORS  CMakeLists.txt  CTestConfig.cmake  DISCLAIMER  THANKS  config.h.in
doc/: compiling.html  software requirements specifications.html
doc/architecture/: Diagrams.uml  OpenGalaxies.vpp  README
doc/doxygen/: Doxyfile
include/: README
include/framework/core/: baseeventdata.h  eventmanager.h  ieventdata.h  ieventlistener.h  ieventmanager.h  process.h  processmanager.h
include/framework/policies/: checking.h  threading.h
include/framework/util/: bytebuffer.h  endian.h  globalconsole.h  hashedstring.h  iserializable.h  log.h  ogdef.h  ogtypes.h  singleton.h
plugins/: CMakeLists.txt
sql/: create_all.sql  create_db.sql
src/: CMakeLists.txt
src/cluster/connection/: .stub
src/framework/: CMakeLists.txt
src/framework/core/: CMakeLists.txt  baseeventdata.cc  baseeventdata.h  eventmanager.cc  eventmanager.h  ieventdata.h  ieventlistener.h  ieventmanager.h  process.cc  process.h  processmanager.cc  processmanager.h
src/framework/policies/: checking.h  threading.h
src/framework/util/: CMakeLists.txt  bytebuffer.h  crctable.h  endian.h  globalconsole.cc  globalconsole.h  hashedstring.cc  hashedstring.h  iserializable.h  log.cc  log.h  ogdef.h  ogtypes.h  singleton.h
tests/: CMakeLists.txt
tests/framework_core_tests/: main.cc  testbytebuffer.cc  testbytebuffer.h  testevent.h  testeventmanager.cc  testeventmanager.h  testprocess.cc  testprocess.h  testprocessmanager.cc  testprocessmanager.h
tests/framework_tests/: main.cc  testevent.h  testeventmanager.h  testprocess.h  testprocessmanager.cc
